--- a/introduction.tex
+++ b/introduction.tex
@@ -14,13 +14,15 @@ The example we discuss in this thesis is that of knots: the space of immersions 
 The Vassiliev invariants are functions on the chambers of the strata (the knots) which take into account the walls of the strata by changing by a predictable amount across a wall (or higher-dimensional stratum), therefore obeying a relation between
 \[f \left( \double \right) \qquad \text{and} \qquad f \left( \poscross \right) - f\left( \negcross \right).\]
 
-Chapter \ref{ch:vassiliev-invariants-and-chord-diagrams} reviews the theory of Vassiliev invariants. The polynomial analogy is particularly fruitful and gives insight into formulae for the product and coproduct on the bialgebra \(\mathcal{V}\) of all Vassiliev invariants. The most important result of the Chapter is the fundamental theorem of Vassiliev invariants, which states that the bialgebra of Vassiliev invariants is effectively described by the bialgebra \(\mathcal{A}\) of chord diagrams. This too is described in terms of this polynomial analogy: elements of \(\mathcal{A}\) are constants of integration, and any polynomial function of degree \(m\) on the real line can be constructed as a definite integral of the zero function \(m\) times with some choice of the constants of integration, and the choice of constants completely describes the polynomial. In the same way, a Vassiliev invariant is described by the algebra \(\mathcal{A}\) of chord diagrams.
+Chapter \ref{ch:vassiliev-invariants-and-chord-diagrams} reviews the theory of Vassiliev invariants, with attention given to the particularly fruitful polynomial analogy. The set of all Vassiliev invariants \(\mathcal{V}\) has the structure of a filtered bialgebra, and its product and coproduct mirror those of the filtered bialgebra of polynomial functions on the real line.
 
-In Chapter \ref{ch:lie-theory-and-jacobi-diagrams}, the structure of the algebra \(\mathcal{A}\) is examined. The relations in this algebra have a Lie algebraic flavour, and as such a classical construction of Bar-Natan takes a metric Lie algebra and produces a functional on \(\mathcal{A}\) and therefore a class of Vassiliev invariants. We showcase this construction by computing, following Yang, the values of the functional associated with the exceptional Lie algebra \(\mathfrak{g}_{2}\) on an infinite family of chord diagrams.
+The most important result of the Chapter is the fundamental theorem of Vassiliev invariants, which states that the bialgebra of Vassiliev invariants is effectively described by its associated graded bialgebra \(\mathcal{A}\) of chord diagrams. Once again, this fits neatly into an analogy with polynomials in which elements of \(\mathcal{A}\) are likened with constants of integration. Indeed, any polynomial function of degree \(m\) on the real line can be constructed as a definite integral of the zero function \(m\) times by making some specific choice of the constant of integration in each of the \(m\) definite integrals. This choice of constants at every stage completely describes the polynomial. An arbitrary Vassiliev invariant is described by the algebra \(\mathcal{A}\) of chord diagrams in an analoous way.
 
-Somewhat surprisingly, not all Vassiliev invariants come from this construction, and a more general construction is required which takes not just Lie superalgebras but Lie algebra objects in arbitrary symmetric monoidal categories. We review a classical theorem of Hinich--Vaintrob that every Vassiliev invariant is recovered by this more general construction with Lie algebra objects in some symmetric monoidal category. However, this result does not shed light on which (if any) symmetric monoidal category suffices to construct all Vassiliev invariants in this way.
+In Chapter \ref{ch:lie-theory-and-jacobi-diagrams}, the structure of the algebra \(\mathcal{A}\) is examined. The relations in this algebra have a Lie algebraic flavour, and as such a classical construction of Bar-Natan takes a metric Lie algebra and produces a functional on \(\mathcal{A}\). By the fundamental theorem of the previous chapter this yields a class of Vassiliev invariants. We showcase this construction by computing, following Yang, the values of the functional associated with the exceptional Lie algebra \(\mathfrak{g}_{2}\) on an infinite family of chord diagrams.
 
-The focus of Chapter \ref{ch:welded-knots-isometry-lie-algebras-and-arrow-diagrams} is welded knots, a type of two-dimensional knotted object in four-dimensional space. Welded knots also have a theory of Vassiliev invariants and a corresponding version of \(\mathcal{A}\), known as the bialgebra of arrow diagrams \(\mathcal{A}_{w}\). While \(\mathcal{A}\) is Lie algebraic in nature, in a similar way \(\mathcal{A}_{w}\) is reminiscent of the cocommutative Drinfeld double of a Lie algebra. We prove a Hinich--Vaintrob style theorem in the theory of welded knots. This gives an alternative proof of a result of Bar-Natan--Dancso that for welded knots, the symmetric monoidal category \(\mathbf{sVect}\) of supervector spaces suffices to construct all Vassiliev invariants.
+Somewhat surprisingly, not all Vassiliev invariants come from this construction, and a more general construction is required which takes not just Lie superalgebras but Lie algebra objects in arbitrary symmetric monoidal categories. We review a classical theorem of Hinich--Vaintrob that every Vassiliev invariant is recovered by this more general construction from some Lie algebra object in some symmetric monoidal category. However, this result does not shed light on what type of symmetric monoidal category suffices to construct all Vassiliev invariants in this way.
+
+The focus of Chapter \ref{ch:welded-knots-isometry-lie-algebras-and-arrow-diagrams} is welded long knots, a type of two-dimensional knotted object in four-dimensional space. Welded long knots also have a theory of Vassiliev invariants and a corresponding version of \(\mathcal{A}\), known as the bialgebra of arrow diagrams \(\mathcal{A}_{w}\). Just as the structure of \(\mathcal{A}\) is Lie algebraic in nature, in a similar way \(\mathcal{A}_{w}\) has structure reminiscent of the cocommutative Drinfeld double of a Lie algebra. We prove a Hinich--Vaintrob style theorem in the theory of welded long knots. This gives an alternative of a result which follows from the work Bar-Natan--Dancso: that for welded long knots, taking Lie algebra objects in the symmetric monoidal category \(\mathbf{sVect}\) of supervector spaces suffices to construct all Vassiliev invariants.
 
 \section*{Conventions}
 
